[
project
]
name = "x-mcp"
version = "0.1.0"
description = "Remote MCP server exposing X.com RSS feed entries"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.15.0",
    "httpx>=0.27.0",
    "feedparser>=6.0.11",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["rss_mcp"]
